# datahobbit

./: Cargo.toml  README.md  pyproject.toml  schema.json
.github/workflows/: release.yml
python/datahobbit/: app.py
src/: csv_generators.rs  lib.rs  main.rs
