[package]
name = "csv_generator"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
fake = { version = "2.10.0", features = ["derive"] }
rayon = "1.7"
rand = "0.8"
anyhow = "1.0.91"
