[package]
name = "csv_generator"
version = "1.0.0"
edition = "2021"

[lib]
name = "datahobbit"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
fake = { version = "3.0.0", features = ["derive"] }
rayon = "1.7"
rand = "0.8"
anyhow = "1.0.91"
indicatif = "0.17.8"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
parquet = "53.2.0"
arrow = "53.2.0"
